cabal-version: 2.0

name: ascii
version: 0.1.0.0
synopsis:  ...
category: Data, Text

description:
    ...

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage:    https://github.com/typeclasses/ascii
bug-Reports: https://github.com/typeclasses/ascii/issues

build-type: Simple

tested-with: ghc == 8.6.5

extra-source-files:
    readme.md
    changelog.md

source-repository head
    type:     git
    location: git://github.com/typeclasses/ascii.git

library
    default-language: Haskell2010

    exposed-modules:

        ASCII

    build-depends:

        base

      -- untested
      , base < 4.13
