cabal-version: 2.0

name: ascii-case
version: 1.0.0.0
synopsis: ASCII letter case
category: Data, Text

description:
    This package defines a @Case@ type that describes the two varieties of ASCII letter: capital and small.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage:    https://github.com/typeclasses/ascii
bug-Reports: https://github.com/typeclasses/ascii/issues

build-type: Simple

tested-with: GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.3

source-repository head
    type:     git
    location: git://github.com/typeclasses/ascii.git

library
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude, StandaloneDeriving
    ghc-options: -Wall

    build-depends: base       >= 4.11 && < 4.14
    build-depends: ascii-char >= 1.0  && < 1.1

    exposed-modules: ASCII.Case
