cabal-version: 2.0

name: ascii-char
version: 1.0.0.0
synopsis: ...
category: Data, Text

description:
    ...

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage:    https://github.com/typeclasses/ascii
bug-Reports: https://github.com/typeclasses/ascii/issues

build-type: Simple

tested-with: ghc == 8.6.5

extra-source-files:
    readme.txt
    changelog.txt

source-repository head
    type:     git
    location: git://github.com/typeclasses/ascii.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: ASCII.Char
    build-depends: base, template-haskell

    -- These versions and above are untested because they did not yet exist at the time of writing.
    build-depends: base < 4.13, template-haskell < 2.16
