cabal-version: 2.0

name: ascii
version: 1.0.0.0
synopsis: ...
category: Data, Text

description:
    ...

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage:    https://github.com/typeclasses/ascii
bug-Reports: https://github.com/typeclasses/ascii/issues

build-type: Simple

tested-with: ghc == 8.6.5

extra-source-files:
    readme.txt
    changelog.txt

source-repository head
    type:     git
    location: git://github.com/typeclasses/ascii.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules: ASCII
    build-depends: ascii-char, base, bytestring, generic-deriving, memory, network, template-haskell, text

    -- This version introduced the Data.Functor.Contravariant module.
    build-depends: base >= 4.12

    -- This is the first version that supports base-4.12.
    build-depends: memory >= 0.14.9

    -- This version added the MonadFail instance for Q.
    build-depends: template-haskell >= 2.11

    -- These versions and above are untested because they did not yet exist at the time of writing.
    build-depends: base < 4.13, memory < 0.16, template-haskell < 2.16

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: test.hs
    build-depends: ascii, base, memory, template-haskell
