cabal-version: 2.0

name: ascii
version: 1.0.0.0
synopsis: The ASCII character set and encoding
category: Data, Text

description:
    This package provides a variety of ways to work with ASCII text.

license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage:    https://github.com/typeclasses/ascii
bug-Reports: https://github.com/typeclasses/ascii/issues

build-type: Simple

tested-with: GHC == 8.8.1, GHC == 8.6.5, GHC == 8.4.3

source-repository head
    type:     git
    location: git://github.com/typeclasses/ascii.git

library
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options: -Wall

    build-depends: base >= 4.11 && < 4.14

    exposed-modules: ASCII, ASCII.Char.Lists

    build-depends: ascii-char >= 1.0 && <1.1
    reexported-modules: ASCII.Char

    build-depends: ascii-group >= 1.0 && <1.1
    reexported-modules: ASCII.Group

    build-depends: ascii-char-superset >= 1.0 && <1.1
    reexported-modules: ASCII.Char.Superset

    build-depends: data-ascii
    reexported-modules: Data.Ascii, Data.Ascii.Blaze, Data.Ascii.ByteString, Data.Ascii.Word8
